fixes radio button wrapping (#323)
* fixes radio button wrapping

* removes important

* comment out data

--- a/src/components/Panel/Panel.module.scss
+++ b/src/components/Panel/Panel.module.scss
@@ -99,6 +99,6 @@
   opacity: 0.5;
 }
 
-.formRow {
-  flex-wrap: unset;
+.labelInner .formRow {
+  flex-wrap: nowrap;
 }
